# metrics_refbox_client

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: refbox.json
launch/: benchmark_mockup.launch  metrics_refbox_client.launch
scripts/: metrics_benchmark_mockup_node  metrics_refbox_client_node
src/metrics_benchmark_mockup/: metrics_benchmark_mockup.py
src/metrics_benchmark_mockup/sample_images/: info.txt
src/metrics_refbox_client/: metrics_refbox_client.py
